// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Icon Component > should render with icon name 1`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M17.0399 7.92603L20.0399 6.92603V17M4 6.5V12.0001M4 12.0001V17.0001M4 12.0001H12M12 6.5V12.0001M12 12.0001V17.0001"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 2`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 10.4998V9.99976C15 8.3429 16.3431 6.99976 18 6.99976H18.1716C19.7337 6.99976 20.9996 8.26627 20.9996 9.82837C20.9996 10.5785 20.702 11.2979 20.1716 11.8284L15 16.9999L21.5 17M3 6.99988V11.9999M3 11.9999V16.9999M3 11.9999H11M11 6.99988V11.9999M11 11.9999V16.9999"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 3`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 7H21L17 11H18C19.6569 11 21 12.3431 21 14C21 15.6569 19.6569 17 18 17C17.3793 17 16.7738 16.8077 16.2671 16.4492C15.7604 16.0907 15.3775 15.5838 15.1709 14.9985M3 7V12M3 12V17M3 12H11M11 7V12M11 12V17"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 4`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8 17H10M10 17H12M10 17L14 6M12 6H14M14 6H16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 5`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8 11.5H12.5M8 11.5V6H12.5C14.433 6 16 7.23122 16 8.75C16 10.2688 14.433 11.5 12.5 11.5M8 11.5V17H13.5C15.433 17 17 15.7688 17 14.25C17 12.7312 15.433 11.5 13.5 11.5H12.5"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 6`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M6 18H18M8 6V11C8 13.2091 9.79086 15 12 15C14.2091 15 16 13.2091 16 11V6"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 7`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 17H20M8 15L5.5 18L4 17M12 7H20M8 5L5.5 8L4 7"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 8`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M11 17H19M4 15.6853V15.5C4 14.6716 4.67157 14 5.5 14H5.54054C6.34658 14 7.00021 14.6534 7.00021 15.4595C7.00021 15.8103 6.8862 16.1519 6.67568 16.4326L4 20.0002L7 20M11 7H19M4 5L6 4V10"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 9`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M6 17C6 17.5523 5.55228 18 5 18C4.44772 18 4 17.5523 4 17C4 16.4477 4.44772 16 5 16C5.55228 16 6 16.4477 6 17Z M6 7C6 7.55228 5.55228 8 5 8C4.44772 8 4 7.55228 4 7C4 6.44772 4.44772 6 5 6C5.55228 6 6 6.44772 6 7Z M11 17H19M11 7H19M6 17C6 17.5523 5.55228 18 5 18C4.44772 18 4 17.5523 4 17C4 16.4477 4.44772 16 5 16C5.55228 16 6 16.4477 6 17ZM6 7C6 7.55228 5.55228 8 5 8C4.44772 8 4 7.55228 4 7C4 6.44772 4.44772 6 5 6C5.55228 6 6 6.44772 6 7Z"
      fill="currentColor"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 10`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 12V16.2C21 17.8802 21 18.7202 20.673 19.362C20.3854 19.9265 19.9265 20.3854 19.362 20.673C18.7202 21 17.8802 21 16.2 21H7.8C6.11984 21 5.27976 21 4.63803 20.673C4.07354 20.3854 3.6146 19.9265 3.32698 19.362C3 18.7202 3 17.8802 3 16.2V12M16 7L12 3M12 3L8 7M12 3V15"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 11`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9 3V21M7.8 3H16.2C17.8802 3 18.7202 3 19.362 3.32698C19.9265 3.6146 20.3854 4.07354 20.673 4.63803C21 5.27976 21 6.11984 21 7.8V16.2C21 17.8802 21 18.7202 20.673 19.362C20.3854 19.9265 19.9265 20.3854 19.362 20.673C18.7202 21 17.8802 21 16.2 21H7.8C6.11984 21 5.27976 21 4.63803 20.673C4.07354 20.3854 3.6146 19.9265 3.32698 19.362C3 18.7202 3 17.8802 3 16.2V7.8C3 6.11984 3 5.27976 3.32698 4.63803C3.6146 4.07354 4.07354 3.6146 4.63803 3.32698C5.27976 3 6.11984 3 7.8 3Z"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 12`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M6 18L18 6M6 6L18 18"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 13`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M17 12C17 12.5523 17.4477 13 18 13C18.5523 13 19 12.5523 19 12C19 11.4477 18.5523 11 18 11C17.4477 11 17 11.4477 17 12Z"
      fill="currentColor"
    />
    <path
      d="M11 12C11 12.5523 11.4477 13 12 13C12.5523 13 13 12.5523 13 12C13 11.4477 12.5523 11 12 11C11.4477 11 11 11.4477 11 12Z"
      fill="currentColor"
    />
    <path
      d="M5 12C5 12.5523 5.44772 13 6 13C6.55228 13 7 12.5523 7 12C7 11.4477 6.55228 11 6 11C5.44772 11 5 11.4477 5 12Z"
      fill="currentColor"
    />
    <path
      d="M17 12C17 12.5523 17.4477 13 18 13C18.5523 13 19 12.5523 19 12C19 11.4477 18.5523 11 18 11C17.4477 11 17 11.4477 17 12Z"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
    <path
      d="M11 12C11 12.5523 11.4477 13 12 13C12.5523 13 13 12.5523 13 12C13 11.4477 12.5523 11 12 11C11.4477 11 11 11.4477 11 12Z"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
    <path
      d="M5 12C5 12.5523 5.44772 13 6 13C6.55228 13 7 12.5523 7 12C7 11.4477 6.55228 11 6 11C5.44772 11 5 11.4477 5 12Z"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 14`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12.3086 2.53125L13.584 4.125H21.5137V18.75H19.0957L19.2158 20.127L3.77441 21.4775L2.42383 6.03711L6.01367 5.72168V2.25H12.083L12.3086 2.53125ZM4.04883 7.40039L5.1377 19.8525L17.5908 18.7627L16.6533 8.05371L9.54492 8.67578L7.89844 7.06348L4.04883 7.40039ZM7.51367 5.59082L8.4541 5.50879L10.1006 7.12207L18.0166 6.42871L18.9639 17.25H20.0137V5.625H12.8623L12.6367 5.34375L11.3613 3.75H7.51367V5.59082Z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 15`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12.3086 2.53125L13.584 4.125H21.5137V11.4316C21.0729 10.9562 20.5687 10.5406 20.0137 10.1992V5.625H12.8623L12.6367 5.34375L11.3613 3.75H7.51367V5.59082L8.4541 5.50879L10.1006 7.12207L18.0166 6.42871L18.2793 9.43066C17.7892 9.28797 17.2775 9.19629 16.75 9.16211L16.6533 8.05371L9.54492 8.67578L7.89844 7.06348L4.04883 7.40039L5.1377 19.8525L9.88477 19.4365C10.1383 19.9494 10.4513 20.4273 10.8154 20.8613L3.77441 21.4775L2.42383 6.03711L6.01367 5.72168V2.25H12.083L12.3086 2.53125Z"
      fill="currentColor"
    />
    <path
      d="M20.4987 16.2795C20.4987 13.9507 18.6107 12.0627 16.2819 12.0627C13.953 12.0627 12.0651 13.9507 12.0651 16.2795C12.0651 18.6084 13.953 20.4963 16.2819 20.4963V21.9963C13.1246 21.9963 10.5651 19.4368 10.5651 16.2795C10.5651 13.1222 13.1246 10.5627 16.2819 10.5627C19.4392 10.5627 21.9987 13.1222 21.9987 16.2795C21.9987 19.4368 19.4392 21.9963 16.2819 21.9963V20.4963C18.6107 20.4963 20.4987 18.6084 20.4987 16.2795Z"
      fill="currentColor"
    />
    <path
      d="M15.4336 18.4805V17.2305H14.1836C13.7694 17.2305 13.4336 16.8947 13.4336 16.4805C13.4336 16.0663 13.7694 15.7305 14.1836 15.7305H15.4336V14.4805C15.4336 14.0663 15.7694 13.7305 16.1836 13.7305C16.5978 13.7305 16.9336 14.0663 16.9336 14.4805V15.7305H18.1836C18.5978 15.7305 18.9336 16.0663 18.9336 16.4805C18.9336 16.8947 18.5978 17.2305 18.1836 17.2305H16.9336V18.4805C16.9336 18.8947 16.5978 19.2305 16.1836 19.2305C15.7694 19.2305 15.4336 18.8947 15.4336 18.4805Z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 16`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M17.8594 5.25H21.75V11.6924C21.3165 11.177 20.8114 10.7242 20.25 10.3486V6.75H17.9902L18.2227 9.41504C17.7324 9.27727 17.2213 9.18966 16.6943 9.16016L16.2236 3.77148L3.77148 4.86133L4.86133 17.3135L9.18652 16.9346C9.2329 17.4452 9.33219 17.9403 9.48047 18.4141L7.75 18.5664V19.25H9.80371C10.0512 19.7897 10.3634 20.2929 10.7314 20.75H6.25V18.6973L3.49707 18.9385L2.14648 3.49707L17.5879 2.14648L17.8594 5.25ZM9.79883 13.3213C9.57517 13.811 9.40349 14.3296 9.29492 14.8711L6.3877 15.126L6.25684 13.6318L9.79883 13.3213ZM14.1699 9.46777C13.056 9.81388 12.0588 10.4252 11.2529 11.2285L6.08594 11.6816L5.95508 10.1865L14.1699 9.46777ZM14.7432 7.36816L5.77734 8.15234L5.64648 6.6582L14.6123 5.87402L14.7432 7.36816Z"
      fill="currentColor"
    />
    <path
      d="M20.5061 16.2811C20.5061 13.9523 18.6182 12.0643 16.2893 12.0643C13.9604 12.0643 12.0725 13.9523 12.0725 16.2811C12.0725 18.61 13.9604 20.4979 16.2893 20.4979V21.9979C13.132 21.9979 10.5725 19.4384 10.5725 16.2811C10.5725 13.1238 13.132 10.5643 16.2893 10.5643C19.4466 10.5643 22.0061 13.1238 22.0061 16.2811C22.0061 19.4384 19.4466 21.9979 16.2893 21.9979V20.4979C18.6182 20.4979 20.5061 18.61 20.5061 16.2811Z"
      fill="currentColor"
    />
    <path
      d="M15.441 18.4821V17.2321H14.191C13.7768 17.2321 13.441 16.8963 13.441 16.4821C13.441 16.0678 13.7768 15.7321 14.191 15.7321H15.441V14.4821C15.441 14.0678 15.7768 13.7321 16.191 13.7321C16.6053 13.7321 16.941 14.0678 16.941 14.4821V15.7321H18.191C18.6053 15.7321 18.941 16.0678 18.941 16.4821C18.941 16.8963 18.6053 17.2321 18.191 17.2321H16.941V18.4821C16.941 18.8963 16.6053 19.2321 16.191 19.2321C15.7768 19.2321 15.441 18.8963 15.441 18.4821Z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 17`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 2C7.2 2 5.33333 6.66667 5 9H6L7 21H17L18 9H19C18.6667 6.66667 16.8 2 12 2Z"
      stroke="currentColor"
    />
    <path
      d="M12 1.25C13.0177 1.25 14.0256 1.45037 14.9658 1.83984C15.9061 2.22932 16.7608 2.79988 17.4805 3.51953C18.2001 4.23919 18.7707 5.09391 19.1602 6.03418C19.5496 6.97445 19.75 7.98226 19.75 9V9.75H18.6904L17.6904 21.75H6.30957L5.30957 9.75H4.25V9C4.25 7.98226 4.45037 6.97445 4.83984 6.03418C5.22932 5.09391 5.79988 4.23919 6.51953 3.51953C7.23919 2.79988 8.09391 2.22932 9.03418 1.83984C9.97445 1.45037 10.9823 1.25 12 1.25ZM7.68945 20.25H16.3105L17.1855 9.75H6.81445L7.68945 20.25ZM12 2.75C11.1793 2.75 10.3666 2.91155 9.6084 3.22559C8.85011 3.53968 8.16142 4.00069 7.58105 4.58105C7.00069 5.16142 6.53968 5.85011 6.22559 6.6084C6.0077 7.13448 5.86495 7.68701 5.79688 8.25H18.2031C18.1351 7.68701 17.9923 7.13448 17.7744 6.6084C17.4603 5.85011 16.9993 5.16142 16.4189 4.58105C15.8386 4.00069 15.1499 3.53968 14.3916 3.22559C13.6334 2.91155 12.8207 2.75 12 2.75ZM12 4C12.5252 4 13.0451 4.07783 13.5303 4.22852C14.0155 4.37927 14.4567 4.60036 14.8281 4.87891C15.1994 5.15738 15.4943 5.48774 15.6953 5.85156C15.8963 6.21554 16 6.60603 16 7H8C8 6.60603 8.10367 6.21554 8.30469 5.85156C8.5057 5.48774 8.80057 5.15738 9.17188 4.87891C9.54329 4.60036 9.98446 4.37927 10.4697 4.22852C10.9549 4.07783 11.4748 4 12 4Z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 18`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 21L16.65 16.65M19 11C19 15.4183 15.4183 19 11 19C6.58172 19 3 15.4183 3 11C3 6.58172 6.58172 3 11 3C15.4183 3 19 6.58172 19 11Z"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;
